--- a/dollar-plugins/dollar-simple-learner-plugin/pom.xml
+++ b/dollar-plugins/dollar-simple-learner-plugin/pom.xml
@@ -28,7 +28,7 @@
     <properties>
         <plugin.name>simple_learner</plugin.name>
     </properties>
-    <packaging>takari-jar</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
