--- a/dollar-core/pom.xml
+++ b/dollar-core/pom.xml
@@ -26,7 +26,7 @@
         <version>0-SNAPSHOT</version>
     </parent>
     <artifactId>dollar-core</artifactId>
-    <packaging>takari-jar</packaging>
+    <packaging>jar</packaging>
     <name>Dollar Core</name>
 
     <dependencies>
