--- a/dollar-plugins/dollar-metrics-plugin/pom.xml
+++ b/dollar-plugins/dollar-metrics-plugin/pom.xml
@@ -27,7 +27,7 @@
     <properties>
         <plugin.name>metrics</plugin.name>
     </properties>
-    <packaging>takari-jar</packaging>
+    <packaging>jar</packaging>
 
     <artifactId>dollar-metrics-plugin</artifactId>
     <dependencies>
