--- a/dollar-plugins/dollar-socketio-plugin/pom.xml
+++ b/dollar-plugins/dollar-socketio-plugin/pom.xml
@@ -27,7 +27,7 @@
     <properties>
         <plugin.name>scoketio_uri</plugin.name>
     </properties>
-    <packaging>takari-jar</packaging>
+    <packaging>jar</packaging>
 
     <artifactId>dollar-socketio-plugin</artifactId>
     <dependencies>
