--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -24,7 +24,7 @@
         <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>takari-jar</packaging>
+    <packaging>jar</packaging>
 
     <artifactId>dollar-runtime</artifactId>
     <dependencies>
