--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>takari-jar</packaging>
+    <packaging>jar</packaging>
 
     <artifactId>dollar-script</artifactId>
     <dependencies>
