--- a/pom.xml
+++ b/pom.xml
@@ -782,25 +782,25 @@
                 The default compiler is javac and is used to compile Java sources. Also note
                 that at present the default source setting and default target setting is
                 1.5, independently of the JDK you run Maven with. -->
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-compiler-plugin</artifactId>-->
-            <!--<version>2.3.2</version>-->
-            <!--<configuration>-->
-            <!--<source>${jdk.version}</source>-->
-            <!--<target>${jdk.version}</target>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
             <plugin>
-                <groupId>io.takari.maven.plugins</groupId>
-                <artifactId>takari-lifecycle-plugin</artifactId>
-                <extensions>true</extensions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
-                    <sourceJar>true</sourceJar>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
                 </configuration>
             </plugin>
+            <!--<plugin>-->
+            <!--<groupId>io.takari.maven.plugins</groupId>-->
+            <!--<artifactId>takari-lifecycle-plugin</artifactId>-->
+            <!--<extensions>true</extensions>-->
+            <!--<configuration>-->
+            <!--<sourceJar>true</sourceJar>-->
+            <!--<source>1.8</source>-->
+            <!--<target>1.8</target>-->
+            <!--</configuration>-->
+            <!--</plugin>-->
             <!--&lt;!&ndash; This plugin provides the capability to build and sign jars. If the-->
             <!--packaging of your project is set to 'jar', this plugin is executed whenever-->
             <!--it passes the "package" phase. default: 2.3.2 &ndash;&gt;-->
