--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,6 @@
 machine:
   environment:
-    previous_release: 0.1.3
-    release: 0.1.4
-    next_release: 0.1.5
+    RELEASE: 0.1.${CIRCLE_BUILD_NUM}
     MAVEN_OPTS: "-Xmx1g -DbuildNumber=${CIRCLE_BUILD_NUM} "
   java:
     version: oraclejdk8
@@ -20,6 +18,7 @@ dependencies:
   pre:
     - echo "login=neilellis" > ~/.github
     - echo "password=${GITHUB_PASSWORD}" >> ~/.github
+    - cd ~ && git clone https://github.com/sillelien/build-utils.git && chmod a+x ~/build-utils/*.sh
     - mvn package -Drat.skip -Dsource.skip=true -DgenerateReports=false -Dmaven.javadoc.skip=true -Dmaven.test.skip
 
 
@@ -41,33 +40,12 @@ deployment:
   staging:
       branch: staging
       commands:
-        - git config --global user.email "hello@neilellis.me"
-        - git config --global user.name "Neil Ellis"
-        - git reset HEAD --hard
-        - git clean -fd
-        - git checkout master
-        - git pull
-        - git merge staging -m "Auto merge"
-#        - 'github-changes -o neilellis -r dollar -k ${GITHUB_TOKEN} -v  -n "In Progress: ${next_release}"'
-        - envsubst '$release:$CIRCLE_BUILD_NUM}' < app_template.yml > app.yml
-        - git commit -a -m "Promotion from staging"
-        - "git tag ${release} || :"
-        - git push --tags
-        - git push origin master
+       
 
   production:
       branch: master
       commands:
-        - git config --global user.email "hello@neilellis.me"
-        - git config --global user.name "Neil Ellis"
-        - mvn versions:set -DnewVersion=${release}-r${CIRCLE_BUILD_NUM}
-        - mvn versions:resolve-ranges
-        - mvn versions:lock-snapshots
-#        - mvn versions:commit
-        - mvn -T 1C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false package
-        - pack/pack.sh
-        - pack/upload.sh ${release} ${CIRCLE_BUILD_NUM}
-        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} -T 2C deploy
+        - ~/build/utils
 
 
   development:
