--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ dependencies:
   pre:
     - echo "login=neilellis" > ~/.github
     - echo "password=${GITHUB_PASSWORD}" >> ~/.github
-    - cd ~ && git clone https://github.com/sillelien/build-utils.git && chmod a+x ~/build-utils.sh
+    - cd ~ && git clone https://github.com/sillelien/build-utils.git && chmod a+x ~/build-utils/*.sh
     - mvn package -Drat.skip -Dsource.skip=true -DgenerateReports=false -Dmaven.javadoc.skip=true -Dmaven.test.skip
 
 
