--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,12 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <kotlin.version>0.8.11</kotlin.version>
-        <camel.version>2.14.0</camel.version>
-        <httpclient.version>4.3.4</httpclient.version>
+        <camel.version>2.15.2</camel.version>
+        <httpclient.version>4.5</httpclient.version>
         <jackson.version>2.3.3</jackson.version>
-        <orientdb.version>1.7.6</orientdb.version>
-        <maven.version>3.2.1</maven.version>
-        <slf4j.version>1.7.7</slf4j.version>
+        <orientdb.version>1.7.10</orientdb.version>
+        <maven.version>3.3.3</maven.version>
+        <slf4j.version>1.7.12</slf4j.version>
         <buildNumber>0</buildNumber>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -135,7 +135,7 @@
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>1.8</version>
+                <version>1.10</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -209,7 +209,7 @@
             <dependency>
                 <groupId>com.mashape.unirest</groupId>
                 <artifactId>unirest-java</artifactId>
-                <version>1.3.20</version>
+                <version>1.4.6</version>
             </dependency>
             <dependency>
                 <groupId>com.github.oxo42</groupId>
@@ -246,18 +246,18 @@
             <dependency>
                 <groupId>org.eclipse.aether</groupId>
                 <artifactId>aether-util</artifactId>
-                <version>1.0.1.v20141111</version>
+                <version>1.0.2.v20150114</version>
             </dependency>
 
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjrt</artifactId>
-                <version>1.7.3</version>
+                <version>1.8.6</version>
             </dependency>
             <dependency>
                 <artifactId>commons-lang3</artifactId>
                 <groupId>org.apache.commons</groupId>
-                <version>3.3.2</version>
+                <version>3.4</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.plexus</groupId>
@@ -267,7 +267,7 @@
             <dependency>
                 <groupId>org.sonatype.sisu</groupId>
                 <artifactId>sisu-inject-plexus</artifactId>
-                <version>2.3.0</version>
+                <version>2.6.0</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.codehaus.plexus</groupId>
@@ -278,7 +278,7 @@
             <dependency>
                 <groupId>com.jcabi</groupId>
                 <artifactId>jcabi-log</artifactId>
-                <version>0.7.21</version>
+                <version>0.16</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>commons-lang3</artifactId>
@@ -302,7 +302,7 @@
             <dependency>
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk</artifactId>
-                <version>1.7.3</version>
+                <version>1.10.8</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>jackson-annotations</artifactId>
@@ -336,7 +336,7 @@
             <dependency>
                 <groupId>org.kohsuke</groupId>
                 <artifactId>github-api</artifactId>
-                <version>1.59</version>
+                <version>1.69</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>commons-codec</artifactId>
@@ -367,7 +367,7 @@
             <dependency>
                 <groupId>net.kencochrane.raven</groupId>
                 <artifactId>raven</artifactId>
-                <version>4.0</version>
+                <version>6.0.0</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -379,7 +379,7 @@
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
-                <version>1.9.10</version>
+                <version>1.9.13</version>
             </dependency>
             <dependency>
                 <groupId>com.orientechnologies</groupId>
@@ -404,7 +404,7 @@
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
-                <version>3.1.0</version>
+                <version>3.1.2</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -435,22 +435,22 @@
             <dependency>
                 <groupId>org.eclipse.jgit</groupId>
                 <artifactId>org.eclipse.jgit</artifactId>
-                <version>3.5.2.201411120430-r</version>
+                <version>4.0.1.201506240215-r</version>
             </dependency>
             <dependency>
                 <groupId>com.beust</groupId>
                 <artifactId>jcommander</artifactId>
-                <version>1.30</version>
+                <version>1.48</version>
             </dependency>
             <dependency>
                 <groupId>org.jparsec</groupId>
                 <artifactId>jparsec</artifactId>
-                <version>2.1</version>
+                <version>2.2.1</version>
             </dependency>
             <dependency>
                 <groupId>org.pegdown</groupId>
                 <artifactId>pegdown</artifactId>
-                <version>1.4.2</version>
+                <version>1.5.0</version>
             </dependency>
             <dependency>
                 <groupId>org.sonatype.aether</groupId>
@@ -472,6 +472,7 @@
             <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
+                <version>0.11</version>
             </plugin>
 
             <!--Not 1.8 compatible yet-->
@@ -496,7 +497,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.14</version>
+                <version>2.18.1</version>
                 <configuration>
                     <aggregate>true</aggregate>
                 </configuration>
@@ -524,7 +525,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.8</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -553,7 +554,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.0.1</version>
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
@@ -563,7 +564,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.1</version>
+                <version>2.10.3</version>
                 <configuration>
                     <aggregate>true</aggregate>
                 </configuration>
@@ -613,7 +614,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>2.8</version>
                     <dependencies>
                         <dependency>
                             <groupId>com.google.code.findbugs</groupId>
@@ -657,7 +658,7 @@
                         <dependency>
                             <groupId>org.apache.maven.skins</groupId>
                             <artifactId>maven-fluido-skin</artifactId>
-                            <version>1.3.1</version>
+                            <version>1.4</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -732,9 +733,9 @@
                         <param>org.apache.camel:camel-parent:${camel.version}</param>
                         <param>org.apache.camel:camel-test:${camel.version}</param>
                         <param>org.apache.commons:commons-lang3:3.3.2</param>
-                        <param>org.apache.httpcomponents:httpasyncclient:4.0.1</param>
-                        <param>org.apache.httpcomponents:httpclient:4.3.4</param>
-                        <param>org.apache.httpcomponents:httpmime:4.3.4</param>
+                        <param>org.apache.httpcomponents:httpasyncclient:4.1</param>
+                        <param>org.apache.httpcomponents:httpclient:${httpclient.version}</param>
+                        <param>org.apache.httpcomponents:httpmime:${httpclient.version}</param>
                         <param>org.apache.maven.wagon:wagon-provider-api:2.4</param>
                         <param>org.apache.maven:maven-core:${maven.version}</param>
                         <param>org.codehaus.plexus:plexus-utils:3.0.15</param>
@@ -755,7 +756,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.3.1</version>
+                <version>1.4</version>
                 <executions>
                     <execution>
                         <id>enforce-versions</id>
@@ -764,7 +765,7 @@
                         </goals>
                         <configuration>
                             <rules>
-                                <DependencyConvergence/>
+                                <dependencyConvergence/>
                                 <!--<requireReleaseDeps>-->
                                 <!--<message>No Snapshots Allowed!</message>-->
                                 <!--</requireReleaseDeps>-->
@@ -777,6 +778,13 @@
                                 <requireOS>
                                     <family>unix</family>
                                 </requireOS>
+                                <requirePluginVersions>
+                                    <message>Best Practice is to always define plugin versions!</message>
+                                    <banLatest>true</banLatest>
+                                    <banRelease>true</banRelease>
+                                    <banSnapshots>true</banSnapshots>
+                                    <phases>clean,deploy,site</phases>
+                                </requirePluginVersions>
                             </rules>
                         </configuration>
                     </execution>
@@ -789,7 +797,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.3</version>
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
@@ -852,7 +860,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
+                <version>2.18.1</version>
                 <configuration>
                     <!--<redirectTestOutputToFile>true</redirectTestOutputToFile>-->
                     <!--<jvm>${JAVA.EXE}</jvm>-->
@@ -878,7 +886,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
+                <version>2.10.3</version>
                 <!--<configuration>-->
                 <!--<doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>-->
                 <!--<docletArtifact>-->
@@ -901,7 +909,7 @@
 
             <plugin>
                 <artifactId>maven-scm-plugin</artifactId>
-                <version>1.8.1</version>
+                <version>1.9.4</version>
                 <configuration>
                     <tag>${project.artifactId}-${project.version}</tag>
                 </configuration>
@@ -927,20 +935,12 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.2</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <!--<executions>-->
-                <!--<execution>-->
-                <!--<id>check</id>-->
-                <!--<phase>verify</phase>-->
-                <!--<goals>-->
-                <!--<goal>check</goal>-->
-                <!--</goals>-->
-                <!--</execution>-->
-                <!--</executions>-->
+                <version>3.0.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.rat</groupId>
