--- a/circle.yml
+++ b/circle.yml
@@ -54,7 +54,7 @@ deployment:
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
         - mvn -T 1C -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false package
-        - mvn -T 2C deploy
+        - mvn -T 2C -Dorg.xml.sax.driver="com.sun.org.apache.xerces.internal.parsers.SAXParser" deploy
 
 
   development:
