--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <name>Dollar</name>
     <description>Lightweight, dynamic programming on the JVM</description>
     <ciManagement>
-        <url>https://circleci.com/gh/neilellis/dollar/tree/master</url>
+        <url>https://circleci.com/gh/sillelien/dollar/tree/master</url>
     </ciManagement>
     <developers>
         <developer>
@@ -57,7 +57,7 @@
         </developer>
     </developers>
 
-    <url>http://neilellis.github.io/dollar/</url>
+    <url>http://sillelien.github.io/dollar/</url>
 
     <licenses>
         <license>
@@ -68,9 +68,9 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/neilellis/dollar/blob/master/</url>
-        <connection>scm:git:git@github.com:neilellis/dollar.git</connection>
-        <developerConnection>scm:git:git@github.com:neilellis/dollar.git</developerConnection>
+        <url>https://github.com/sillelien/dollar/blob/master/</url>
+        <connection>scm:git:git@github.com:sillelien/dollar.git</connection>
+        <developerConnection>scm:git:git@github.com:sillelien/dollar.git</developerConnection>
     </scm>
 
     <modules>
@@ -668,34 +668,34 @@
         <plugins>
 
 
-            <!--<plugin>-->
-            <!--<groupId>org.codehaus.mojo</groupId>-->
-            <!--<artifactId>license-maven-plugin</artifactId>-->
-            <!--<version>1.8</version>-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.8</version>
 
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>download-licenses</id>-->
-            <!--<goals>-->
-            <!--<goal>download-licenses</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>add-third-party</id>-->
-            <!--<goals>-->
-            <!--<goal>aggregate-add-third-party</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<licenseMerges>-->
-            <!--<licenseMerge>The Apache Software License, Version 2.0|Apache License, Version 2.0-->
-            <!--</licenseMerge>-->
-            <!--<licenseMerge>The Apache Software License, Version 2.0|Apache Public License 2.0-->
-            <!--</licenseMerge>-->
-            <!--</licenseMerges>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
+                <executions>
+                    <execution>
+                        <id>download-licenses</id>
+                        <goals>
+                            <goal>download-licenses</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>add-third-party</id>
+                        <goals>
+                            <goal>aggregate-add-third-party</goal>
+                        </goals>
+                        <configuration>
+                            <licenseMerges>
+                                <licenseMerge>The Apache Software License, Version 2.0|Apache License, Version 2.0
+                                </licenseMerge>
+                                <licenseMerge>The Apache Software License, Version 2.0|Apache Public License 2.0
+                                </licenseMerge>
+                            </licenseMerges>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.complykit</groupId>
                 <artifactId>license-check-maven-plugin</artifactId>
@@ -828,60 +828,8 @@
                     <target>${jdk.version}</target>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>io.takari.maven.plugins</groupId>-->
-            <!--<artifactId>takari-lifecycle-plugin</artifactId>-->
-            <!--<extensions>true</extensions>-->
-            <!--<configuration>-->
-            <!--<sourceJar>true</sourceJar>-->
-            <!--<source>1.8</source>-->
-            <!--<target>1.8</target>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
-            <!--&lt;!&ndash; This plugin provides the capability to build and sign jars. If the-->
-            <!--packaging of your project is set to 'jar', this plugin is executed whenever-->
-            <!--it passes the "package" phase. default: 2.3.2 &ndash;&gt;-->
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-jar-plugin</artifactId>-->
-            <!--<version>2.4</version>-->
-            <!--<configuration>-->
-            <!--<archive>-->
-            <!--<manifest>-->
-            <!--<addClasspath>true</addClasspath>-->
-            <!--<classpathPrefix>dependency-jars/</classpathPrefix>-->
-            <!--</manifest>-->
-            <!--</archive>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
 
-            <!-- The dependency plugin provides the capability to manipulate artifacts.
-               It can copy and/or unpack artifacts from local or remote repositories to
-               a specified location. -->
 
-            <!-- copy-dependencies - Goal that copies the project dependencies from
-               the repository to a defined location. -->
-            <!-- optional step -->
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-dependency-plugin</artifactId>-->
-            <!--<version>2.8</version>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>copy-dependencies</id>-->
-            <!--<phase>package</phase>-->
-            <!--<goals>-->
-            <!--<goal>copy-dependencies</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<includeGroupIds>log4j</includeGroupIds>-->
-            <!--<outputDirectory>-->
-            <!--${project.build.directory}/dependency-jars/-->
-            <!--</outputDirectory>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -942,6 +890,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
+                <version>3.4</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -966,16 +915,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>org.jacoco</groupId>-->
-            <!--<artifactId>jacoco-maven-plugin</artifactId>-->
-            <!--<version>0.7.2.201409121644</version>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-            <!--<groupId>org.codehaus.mojo</groupId>-->
-            <!--<artifactId>clirr-maven-plugin</artifactId>-->
-            <!--<version>2.6.1</version>-->
-            <!--</plugin>-->
+
         </plugins>
         <extensions>
             <extension>
