--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,7 @@ dependencies:
     - echo "login=neilellis" > ~/.github
     - echo "password=${GITHUB_PASSWORD}" >> ~/.github
     - cd ~ && git clone https://github.com/sillelien/build-utils.git && chmod a+x ~/build-utils/*.sh
+    - "[[ ${CIRCLE_BRANCH} != 'master' ]] || mvn versions:set -DnewVersion=$(cat .release) && mvn versions:resolve-ranges && mvn versions:lock-snapshots"
     - mvn package -e -q -Drat.skip -Dsource.skip=true -DgenerateReports=false -Dmaven.javadoc.skip=true -Dmaven.test.skip
 
 
@@ -49,9 +50,6 @@ deployment:
       commands:
         - git config --global user.email "hello@neilellis.me"
         - git config --global user.name "Neil Ellis"
-        - mvn versions:set -DnewVersion=$(cat .release)
-        - mvn versions:resolve-ranges
-        - mvn versions:lock-snapshots
 #        - mvn versions:commit
         - mvn -T 1C -e -q -Dmaven.test.skip=true -Drat.skip=true -DskipEnforcer -Dmaven.javadoc.skip=true -DgenerateReports=false package
         - mvn -T 1C -e -q -Dorg.xml.sax.driver=com.sun.org.apache.xerces.internal.parsers.SAXParser deploy
