--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <httpclient.version>4.5</httpclient.version>
         <jackson.version>2.6.0</jackson.version>
         <orientdb.version>2.0.13</orientdb.version>
-        <maven.version>3.3.3</maven.version>
+        <maven.version>3.3.9</maven.version>
         <slf4j.version>1.7.12</slf4j.version>
         <buildNumber>0</buildNumber>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -86,28 +86,28 @@
             <dependency>
                 <groupId>com.sillelien</groupId>
                 <artifactId>dollar-core</artifactId>
-                <version>0.1.44</version>
+                <version>0.2.114</version>
             </dependency>
             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
-                <version>20140107</version>
+                <version>20170516</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>4.12</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>18.0</version>
+                <version>22.0-android</version>
             </dependency>
             <dependency>
                 <groupId>org.jetbrains</groupId>
                 <artifactId>annotations</artifactId>
-                <version>13.0</version>
+                <version>15.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -182,7 +182,7 @@
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpasyncclient</artifactId>
-                <version>4.1</version>
+                <version>4.1.3</version>
                 <exclusions>
                     <exclusion>
                         <groupId>commons-logging</groupId>
@@ -209,7 +209,7 @@
             <dependency>
                 <groupId>com.mashape.unirest</groupId>
                 <artifactId>unirest-java</artifactId>
-                <version>1.4.6</version>
+                <version>1.4.9</version>
             </dependency>
             <dependency>
                 <groupId>com.github.oxo42</groupId>
@@ -246,23 +246,23 @@
             <dependency>
                 <groupId>org.eclipse.aether</groupId>
                 <artifactId>aether-util</artifactId>
-                <version>1.0.2.v20150114</version>
+                <version>1.1.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjrt</artifactId>
-                <version>1.8.6</version>
+                <version>1.8.10</version>
             </dependency>
             <dependency>
                 <artifactId>commons-lang3</artifactId>
                 <groupId>org.apache.commons</groupId>
-                <version>3.4</version>
+                <version>3.6</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-utils</artifactId>
-                <version>3.0.15</version>
+                <version>3.0.24</version>
             </dependency>
             <dependency>
                 <groupId>org.sonatype.sisu</groupId>
@@ -278,7 +278,7 @@
             <dependency>
                 <groupId>com.jcabi</groupId>
                 <artifactId>jcabi-log</artifactId>
-                <version>0.16</version>
+                <version>0.17.2</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>commons-lang3</artifactId>
@@ -297,12 +297,12 @@
             <dependency>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-provider-api</artifactId>
-                <version>2.4</version>
+                <version>2.12</version>
             </dependency>
             <dependency>
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk</artifactId>
-                <version>1.10.8</version>
+                <version>1.11.158</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>jackson-annotations</artifactId>
@@ -325,7 +325,7 @@
             <dependency>
                 <groupId>org.apache.maven.shared</groupId>
                 <artifactId>maven-shared-jar</artifactId>
-                <version>1.1</version>
+                <version>1.2</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.apache.bcel</groupId>
@@ -336,7 +336,7 @@
             <dependency>
                 <groupId>org.kohsuke</groupId>
                 <artifactId>github-api</artifactId>
-                <version>1.69</version>
+                <version>1.86</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>commons-codec</artifactId>
@@ -361,7 +361,7 @@
             <dependency>
                 <groupId>com.jayway.restassured</groupId>
                 <artifactId>rest-assured</artifactId>
-                <version>2.3.3</version>
+                <version>2.9.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -404,7 +404,7 @@
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.3</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -425,7 +425,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.4</version>
+                <version>2.5</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -435,22 +435,22 @@
             <dependency>
                 <groupId>org.eclipse.jgit</groupId>
                 <artifactId>org.eclipse.jgit</artifactId>
-                <version>4.0.1.201506240215-r</version>
+                <version>4.8.0.201706111038-r</version>
             </dependency>
             <dependency>
                 <groupId>com.beust</groupId>
                 <artifactId>jcommander</artifactId>
-                <version>1.48</version>
+                <version>1.72</version>
             </dependency>
             <dependency>
                 <groupId>org.jparsec</groupId>
                 <artifactId>jparsec</artifactId>
-                <version>2.2.1</version>
+                <version>3.0</version>
             </dependency>
             <dependency>
                 <groupId>org.pegdown</groupId>
                 <artifactId>pegdown</artifactId>
-                <version>1.5.0</version>
+                <version>1.6.0</version>
             </dependency>
             <dependency>
                 <groupId>org.sonatype.aether</groupId>
@@ -624,7 +624,7 @@
                         <dependency>
                             <groupId>org.apache.maven.shared</groupId>
                             <artifactId>maven-shared-jar</artifactId>
-                            <version>1.1</version>
+                            <version>1.2</version>
                             <exclusions>
                                 <exclusion>
                                     <groupId>org.apache.bcel</groupId>
@@ -934,13 +934,13 @@
         <repository>
             <id>aws-release</id>
             <name>AWS Release Repository</name>
-            <url>s3://sillelien-maven-repo/release</url>
+            <url>s3://dollar-repo/release</url>
             <layout>default</layout>
         </repository>
         <snapshotRepository>
             <id>aws-snapshot</id>
             <name>AWS Snapshot Repository</name>
-            <url>s3://sillelien-maven-repo/snapshot</url>
+            <url>s3://dollar-repo/snapshot</url>
             <layout>default</layout>
         </snapshotRepository>
     </distributionManagement>
@@ -948,7 +948,7 @@
     <repositories>
         <repository>
             <id>s3-releases</id>
-            <url>http://sillelien-maven-repo.s3-website-eu-west-1.amazonaws.com/release</url>
+            <url>http://dollar-repo.s3-website-eu-west-1.amazonaws.com/release</url>
         </repository>
     </repositories>
 
