--- a/pom.xml
+++ b/pom.xml
@@ -668,7 +668,7 @@
                 <version>3.11.4</version>
                 <configuration>
                     <apiKey>0c797be864338a3649f0</apiKey>
-                    <organisation>neilellis_orga</organisation>
+                    <organisation>sillelien</organisation>
                     <team>Owners</team>
                 </configuration>
             </plugin>
