--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
                 <version>0.2.218</version>
             </dependency>
             <dependency>
+                <groupId>com.sillelien</groupId>
+                <artifactId>java-as-script</artifactId>
+                <version>0.9.97</version>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
                 <version>${jackson.version}</version>
@@ -937,18 +942,12 @@
             <url>scm:git:git@github.com:sillelien/dollar.git</url>
         </site>
         <repository>
-            <id>aws-release</id>
-            <name>AWS Release Repository</name>
-            <url>s3://dollar-repo/release</url>
-            <layout>default</layout>
+            <id>bintray-sillelien-maven</id>
+            <name>sillelien-maven</name>
+            <url>https://api.bintray.com/maven/sillelien/maven/dollar/;publish=1</url>
         </repository>
-        <snapshotRepository>
-            <id>aws-snapshot</id>
-            <name>AWS Snapshot Repository</name>
-            <url>s3://dollar-repo/snapshot</url>
-            <layout>default</layout>
-        </snapshotRepository>
     </distributionManagement>
+
 
     <repositories>
         <repository>
